<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BDB76B"
    android:gravity="center_horizontal" >

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText3"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="38dp"
        android:ems="10"
        android:hint="@string/amount_of_money_"
        android:inputType="number"
        android:textColorHint="@android:color/holo_blue_light" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText3"
        android:layout_alignBottom="@+id/editText3"
        android:layout_marginLeft="14dp"
        android:layout_toRightOf="@+id/editText3"
        android:background="@drawable/button_custom"
        android:text="@string/date" />

    <Spinner
        android:id="@+id/spinner"
        android:spinnerMode="dialog"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/spinnerbg"
        android:prompt="@string/country_prompt" />

    <Button
        android:id="@+id/button1"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/button2"
        android:layout_marginBottom="61dp"
        android:background="@drawable/button_custom1"
        android:text="@string/save_" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button1"
        android:layout_alignLeft="@+id/spinner"
        android:layout_marginBottom="44dp"
        android:ems="10"
        android:hint="@string/date"
        android:inputType="date"
        android:textColorHint="@android:color/holo_blue_light" >

        <requestFocus />
    </EditText>

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/button2"
        android:layout_below="@+id/spinner"
        android:layout_marginTop="34dp"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radio0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/borrow" />

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/lend" />
    </RadioGroup>

    <EditText
        android:id="@+id/editonwhat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText4"
        android:layout_alignLeft="@+id/spinner"
        android:layout_marginBottom="14dp"
        android:ems="10"
        android:hint="@string/for_what_"
        android:textColorHint="@android:color/holo_blue_light" />

</RelativeLayout>