<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_grey"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/editname"
        android:layout_width="274dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:background="@drawable/editext"
        android:paddingLeft="15dp"
        android:hint="@string/enter_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/editold"
        android:layout_width="274dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/editext"
        android:ems="10"
        android:paddingLeft="15dp"
        android:hint="@string/enter_old_password"
        android:inputType="numberPassword" />

    <EditText
        android:id="@+id/editnew"
        android:layout_width="274dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/editext"
        android:ems="10"
        android:paddingLeft="15dp"
        android:hint="@string/enter_new_password"
        android:inputType="numberPassword" />

    <Button
        android:id="@+id/passwordbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_custom1"
        android:text="@string/save_" />

</LinearLayout>
