<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BDB76B"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <Button
        android:id="@+id/b1"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/b2"
        android:layout_alignParentTop="true"
        android:layout_marginTop="17dp"
        android:background="@drawable/button_custom"
        android:text="@string/add_person" />
    
    <Button
        android:id="@+id/b3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/b2"
        android:layout_alignRight="@+id/b1"
        android:layout_centerVertical="true"
        android:background="@drawable/button_custom"
        android:text="@string/show_all_records_" />

    <Button
        android:id="@+id/b2"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/b1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:background="@drawable/button_custom"
        android:text="@string/add_record" />

    <Button
        android:id="@+id/b4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/b3"
        android:layout_alignRight="@+id/b3"
        android:layout_below="@+id/b3"
        android:layout_marginTop="36dp"
        android:background="@drawable/button_custom2"
        android:text="@string/delete_database" />

</RelativeLayout>