<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BDB76B" >

    <Button
        android:id="@+id/okbtn"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/gobtn2"
        android:layout_alignTop="@+id/spinforname"
        android:background="@drawable/button_custom"
        android:text="@string/ok" />

    <Button
        android:id="@+id/gobtn2"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/spinforindiv2"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:background="@drawable/button_custom2"
        android:text="@string/del" />

    <Spinner
        android:id="@+id/spinforindiv2"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_marginRight="19dp"
        android:layout_marginTop="86dp"
        android:layout_toLeftOf="@+id/gobtn2"
        android:background="@drawable/spinnerbg"
        android:prompt="@string/country_prompt" />

    <Spinner
        android:id="@+id/spinforname"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_above="@+id/gobtn2"
        android:layout_alignLeft="@+id/spinforindiv2"
        android:layout_marginBottom="14dp"
        android:background="@drawable/spinnerbg" />

</RelativeLayout>
