<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/newback1"
    android:orientation="vertical" >

    <Button
        android:id="@+id/gobtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="15dp"
        android:background="@drawable/button_custom"
        android:text="@string/go" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_marginTop="22dp"
        android:text="@string/money"
        android:textColor="#000"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/gobtn"
        android:layout_alignLeft="@+id/editpass"
        android:layout_marginBottom="15dp"
        android:text="@string/nowhere"
        android:textColor="#000"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="21dp"
        android:text="@string/goes"
        android:textColor="#000"
        android:textSize="35sp" />
    

    <EditText
        android:id="@+id/editpass"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/gobtn"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="18dp"
        android:background="@drawable/editext"
        android:ems="10"
        android:inputType="numberPassword"
        android:paddingLeft="5dp"
        android:textSize="35sp"
        android:textStyle="bold" >

        <requestFocus />
    </EditText>

    <ImageButton
        android:id="@+id/passimgbtn"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_alignLeft="@+id/editpass"
        android:layout_below="@+id/editpass"
        android:layout_marginTop="16dp"
        android:src="@drawable/passo"
        tools:ignore="ContentDescription" />

</RelativeLayout>